# stalk-api

./: .env  .gitignore  Cargo.toml  README.md  test.http
.github/: dependabot.yml
.github/workflows/: rust.yml
.sqlx/: query-0d2c8837debc4b8ecaed94c25facc4b681356c672ee0c23d0cdd4aea416f2d0e.json  query-1225d1c48394e402140e252773cb3dcd181973b81cf8e9add5c97b1670a00cf4.json  query-208e510aa3506422ac58e9bd34fcc8dfcffb0381499f303aca0d372051180912.json  query-2b30445803496c79a475e9e9dccd10d6dd13f5d5496d4505267c817c3b4cf996.json  query-2c7ef6f9e07bdfc2b67bc33d599d30cd1167efa988c8c9235b460e8911672c26.json  query-4479bcf973811f052ee3ce49223cd4b2932d8d0abb79a371492b1ef1550ff020.json  query-581d75011f3cb91e77a3d1234a766b9e3d5a6d7d3b8ae9dd4653e9b40b025ce4.json  query-6dc061e382207f6ab07e0f05215858f3458caa3ee66c82ac5a4dd96a04d160e1.json  query-70ed1158a1cfa5cd1afbfd1259667ccf72bdef50c416c4ed174e122e99109501.json  query-74b464a347c5e98d8105793af78c769e738fc44cc8a941636f61a415df69c28d.json  query-8edb19f7898ee76ef828cc62b60c854d78266b6cfcfdd1abf3fa36d14dfbcb6a.json  query-9c4495956257a09ee9ebe144b65035cb6a9938c760d721f74121437b662db305.json  query-e22cb353467254ee8fc36b64505aa540aeb51898b01a452072de3c09299b4da0.json
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs
src/db/: coords.rs  migrate.rs  mod.rs
src/models/: coords.rs
src/routes/: coords.rs
systemd/: stalk-api.service
