[package]
name = "stalk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-httpauth = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-async-std-native-tls", "sqlite", "migrate"] }
log = "0.4"
env_logger = "0.11.8"
clap = { version = "4.5", features = ["derive"] }

